[package]
name = "graphics-from-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf","image","gfx","mixer"]

[dependencies.rand]
version = "0.8.4"

[dependencies.nalgebra]
version = "0.31.1"

# Some optimization for debug builds
[profile.dev]
opt-level = 1